force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/HRCFSL_Calibrated_Tool__c.object-meta.xml
<CustomObject>
    <label>Calibrated Tool</label>
    <nameField>
        <label>Calibrated Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calibrated Tool</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>