force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/fields/HRCFSL_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset__c</fullName>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The tool you have selected is out of service and cannot be used.</errorMessage>
        <filterItems>
            <field>Asset.HRCFSL_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Calibrated Tool</relationshipLabel>
    <relationshipName>Calibrated_Tool</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>