force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/fields/HRCFSL_Block_Creation__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Block_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to trigger a validation rule if the user tries to add the same tool multiple times on a Work Order. SE-302.</description>
    <label>Block Creation</label>
    <type>Checkbox</type>
</CustomField>