force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/fields/HRCSVC_Used__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Used__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>