force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/validationRules/HRCFSL_Cannot_Add_Duplicate_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCFSL_Cannot_Add_Duplicate_Asset</fullName>
    <active>true</active>
    <description>Validation Rule used to prevent the user from adding the same calibrated tool to a Work Order more than once.</description>
    <errorConditionFormula>HRCFSL_Block_Creation__c &amp;&amp; NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c)</errorConditionFormula>
    <errorMessage>You have already added this asset as a Calibrated Tool. You cannot add it again.</errorMessage>
</ValidationRule>