force-app/main/default/objects/HRCFSL_Calibrated_Tool__c/validationRules/HRCSVC_Prevent_Asset_w_Past_Next_PM_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Prevent_Asset_w_Past_Next_PM_Date</fullName>
    <active>true</active>
    <errorConditionFormula>HRCFSL_Asset__r.HRCFSL_Next_PM_DT__c &lt; TODAY()  &amp;&amp;  

NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c)</errorConditionFormula>
    <errorMessage>Please select an Asset with Next PM Date in the future</errorMessage>
</ValidationRule>